# encoded

./: .gitignore  pyproject.toml
encoded/: base.py  document.py  fields.py
tests/: test_document.py
